# attention.rs

./: Cargo.toml  ReadMe.md
src/: cache.rs  lib.rs  mask.rs  moe.rs  paged_attention.rs  scale_collector.rs  scale_update.rs  topk.rs
src/kernels/: Cargo.toml  build.rs
src/kernels/src/: copy_blocks_kernel.cu  cuda_compat.h  ffi.rs  lib.rs  mask.cu  moe_gemm.cu  moe_gemm_gguf.cu  moe_gemm_wmma.cu  moe_wmma_gguf.cu  paged_attention_v1.cu  paged_attention_v2.cu  pagedattention.cu  pagedattention.cuh  prefill_paged_attn.cu  reshape_and_cache_kernel.cu  sort.cu  update_kvscales.cu
src/kernels/src/attention/: dtype_bfloat16.cuh  dtype_float32.cuh  dtype_fp8.cuh
src/kernels/src/gguf/: gguf.cuh
src/kernels/src/marlin/: marlin_cuda_kernel.cuh  marlin_gptq_cuda_kernel.cuh  marlin_repack.cu
src/kernels/src/moe/: moe_utils.cuh  topk_softmax_kernels.cu
src/metal-kernels/: Cargo.toml  build.rs
src/metal-kernels/src/: copy_blocks.metal  lib.rs  mask.metal  metal_dtype.metal  pagedattention.metal  prefill_paged_attn.metal  reshape_and_cache.metal  update_scales.metal  utils.rs
