[package]
name = "attention-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
candle-transformers = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42", optional = true }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
cudarc = {version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true }
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
tracing = "0.1.40"
kernels = {path = "./src/kernels", version="0.1.0", optional = true}
metal = { version = "0.27.0", features = ["mps"], optional = true }
metal-kernels = {path = "./src/metal-kernels", version="0.1.0", optional = true}

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:kernels"]
graph = ["cuda", "candle-core/graph"]
flash-attn = ["dep:candle-flash-attn"]
flash-decoding = ["dep:candle-flash-attn", "candle-flash-attn/flash-decoding"]
flash-context = ["dep:candle-flash-attn", "candle-flash-attn/flash-context"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal-kernels", "dep:metal"]
