[package]
name = "attention-rs"
version = "0.1.6"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/zuston/candle.git", rev = "10cf0bb0428f1c4025fc30b530d72df7eb59a79e" }
candle-nn = { git = "https://github.com/zuston/candle.git",  rev = "10cf0bb0428f1c4025fc30b530d72df7eb59a79e" }
candle-flash-attn = { git = "https://github.com/zuston/candle.git",  rev = "10cf0bb0428f1c4025fc30b530d72df7eb59a79e", optional = true }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
tracing = "0.1.40"
parking_lot = "0.12.4"
kernels = {path = "./src/kernels", version="0.1.0", optional = true}
metal = { version = "0.27.0", features = ["mps"], optional = true }
metal-kernels = {path = "./src/metal-kernels", version="0.1.0", optional = true}

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:kernels"]
graph = ["cuda", "candle-core/graph"]
flash-attn = ["dep:candle-flash-attn"]
flash-decoding = ["dep:candle-flash-attn", "candle-flash-attn/flash-decoding", "kernels/no-fp8-kvcache"]
flash-context = ["dep:candle-flash-attn", "candle-flash-attn/flash-context", "kernels/no-fp8-kvcache"]
no-marlin = ["dep:kernels", "kernels/no-marlin"]
no-fp8-kvcache = ["dep:kernels", "kernels/no-fp8-kvcache"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal-kernels", "dep:metal"]
